# bebop_flocking

./: README.md
bebop_code/: README.md
bebop_code/action/: README.md
bebop_code/action/action/: CMakeLists.txt  package.xml
bebop_code/action/action_softbus/: CMakeLists.txt  package.xml  swarm_action_plugins.xml
bebop_code/action/action_softbus/cfg/: ActionSoftbus.cfg
bebop_code/action/action_softbus/include/action_softbus/: action_core.h  action_softbus.h  bebop_action.h  demo_action.h  fix_alpha.h  micros_flock.h
bebop_code/action/action_softbus/launch/: action_softbus.launch  demo_action.launch
bebop_code/action/action_softbus/src/: action_softbus.cpp  action_softbus_node.cpp  bebop_action.cpp  demo_action.cpp
bebop_code/bebop_autonomy/bebop_autonomy/: package.xml
bebop_code/bebop_autonomy/bebop_description/launch/: description.launch
bebop_code/bebop_autonomy/bebop_driver/: CMakeLists.txt
bebop_code/bebop_autonomy/bebop_driver/config/: defaults.yaml
bebop_code/bebop_autonomy/bebop_driver/include/bebop_driver/: bebop_driver_nodelet.h
bebop_code/bebop_autonomy/bebop_driver/launch/: bebop_node.launch  five_bebop_node.launch  pi_bebop_node.launch  three_bebop_node.launch  two_bebop_node.launch
bebop_code/bebop_autonomy/bebop_driver/src/: bebop_driver_nodelet.cpp
bebop_code/bebop_vel_ctrl/launch/: bebop_vel_ctrl.launch
bebop_code/bebop_vel_ctrl/src/: bebop_vel_ctrl.cpp
bebop_code/da_simulator/turtlebot_simulator/turtlebot_stage/launch/: hector_navigation.launch  pi_navigation.launch
bebop_code/da_simulator/turtlebot_simulator/turtlebot_stage/maps/stage/: const.txt  turtlebot.inc
bebop_code/decide_softbus_msgs/: CMakeLists.txt  package.xml
bebop_code/decide_softbus_msgs/action/: MoveBase.action
bebop_code/decide_softbus_msgs/msg/: Path.msg  SwarmConfig.msg
bebop_code/decide_softbus_msgs/srv/: SetSwarmConfig.srv
bebop_code/flight_barrier/: CMakeLists.txt  README.md  package.xml
bebop_code/flight_barrier/launch/: flight_barrier.launch
bebop_code/flight_barrier/src/: flight_barrier_node.cpp
bebop_code/quadrotor_code/: CMakeLists.txt  package.xml
bebop_code/quadrotor_code/launch/: bebop_manager.launch  fix_five.launch  fix_three.launch  fix_three_sim.launch  fix_two.launch  fly_circle.launch  gpstest.launch  hector_manager.launch  hector_reset.launch  pi_fix.launch
bebop_code/quadrotor_code/msg/: Status.msg
bebop_code/quadrotor_code/rviz/: bebop_swarm_navigation.rviz
bebop_code/quadrotor_code/src/: bebop_manager.cpp  fix_alpha.cpp  fly_circle.cpp  hector_reset.cpp  hector_sim_manager.cpp
workstation_code/da_simulator/turtlebot_apps/turtlebot_navigation/launch/includes/: amcl.launch.xml  amcl_arg.launch.xml  move_base.launch.xml  swarm_move_base.launch.xml
workstation_code/da_simulator/turtlebot_apps/turtlebot_navigation/param/: costmap_common_params.yaml  global_planner_params.yaml  move_base_params.yaml
workstation_code/da_simulator/turtlebot_simulator/turtlebot_stage/launch/: bebop_navigation.launch  empty.launch  pi_manager_navigation.launch  turtlebot_in_stage.launch
workstation_code/da_simulator/turtlebot_simulator/turtlebot_stage/maps/stage/: 20generator.cpp  a.out  empty.world  maze.world
workstation_code/decide/base_local_planner/src/: goal_functions.cpp
workstation_code/decide/carrot_planner/: CMakeLists.txt  package.xml
workstation_code/decide/carrot_planner/include/carrot_planner/: carrot_planner.h
workstation_code/decide/carrot_planner/src/: carrot_planner.cpp
workstation_code/decide/costmap_2d/src/: costmap_2d_ros.cpp
workstation_code/decide/decide/: CMakeLists.txt  package.xml
workstation_code/decide/decide_softbus/: CMakeLists.txt  package.xml
workstation_code/decide/decide_softbus/cfg/: MoveBase.cfg
workstation_code/decide/decide_softbus/include/decide_softbus/: move_base.h
workstation_code/decide/decide_softbus/src/: move_base.cpp  move_base_node.cpp
workstation_code/decide/decide_softbus_msgs/msg/: NavigationPoint.msg
workstation_code/decide/decide_softbus_msgs/srv/: GetPlan.srv  MakeNavPlan.srv  SetControlling.srv
workstation_code/decide/dwa_local_planner/src/: dwa_planner_ros.cpp
workstation_code/decide/global_planner/: CMakeLists.txt  package.xml
workstation_code/decide/global_planner/include/global_planner/: orientation_filter.h  planner_core.h
workstation_code/decide/global_planner/src/: orientation_filter.cpp  plan_node.cpp  planner_core.cpp
workstation_code/decide/nav_core/: CMakeLists.txt  package.xml
workstation_code/decide/nav_core/include/nav_core/: base_global_planner.h
workstation_code/decide/navfn/: CMakeLists.txt  package.xml
workstation_code/decide/navfn/include/navfn/: navfn_ros.h
workstation_code/decide/navfn/src/: navfn_node.cpp  navfn_ros.cpp
workstation_code/decide/navigation/: package.xml
workstation_code/decide/tf_bridge/: CMakeLists.txt  package.xml
workstation_code/decide/tf_bridge/include/tf_bridge/: tf_bridge.h
workstation_code/quadrotor_code/: CMakeLists.txt
workstation_code/quadrotor_code/launch/: act_nine.launch  act_six.launch  act_three.launch  bebop_manager.launch  driver_nine.launch  driver_six.launch  driver_three.launch  one_act.launch  one_driver.launch
workstation_code/quadrotor_code/maps/: maze.yaml
workstation_code/quadrotor_code/msg/: 无标题文档
workstation_code/quadrotor_code/rviz/: bebop_swarm_navigation.rviz
workstation_code/quadrotor_code/src/: bebop_manager.cpp  fix_alpha.cpp  gpstest.cpp  hector_sim_manager.cpp
workstation_code/turtlebot_teleop/: CMakeLists.txt
workstation_code/turtlebot_teleop/launch/: bebop_teleop.launch  two_bebop_teleop.launch
workstation_code/turtlebot_teleop/scripts/: swarm_teleop  turtlebot_teleop_key
