<?xml version="1.0"?>
<package>
  <name>flight_barrier</name>
  <version>0.0.1</version>
  <description>a barrier for aircraft</description>

  <maintainer email="changxuefengcn@163.com">Xuefeng Chang</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/flight_barrier</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gps_common</build_depend>

  <run_depend>message_filters</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>gps_common</run_depend>

</package>
